# QuickBench

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  python-app.yml
QuickBench/: MLbench.py  __init__.py  core.py
tests/: test_ml_benchmark.py  test_timer.py
