[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "QuickBench"  
version = "0.0.12"
description = "A lightweight utility to time python functions and blocks."
readme = "README.md"
requires-python = ">=3.7"
authors = [
  {name = "Ankit Dutta", email = "masterankit150@gmail.com"}
]