[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "QuickBench"  
version = "0.0.122"
description = "A lightweight python package to time python functions and blocks, and bench machine learning models"
readme = "README.md"
requires-python = ">=3.7"
authors = [
  {name = "Minerva AI", email = "services.ai.minerva@gmail.com"}
]

[tool.setuptools.packages.find]
where = ["."]
include = ["QuickBench*"] 
exclude = ["assets*", "tests*"]